--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,21 +1,22 @@
 [tool.poetry]
-name = "Name"
+name = "the-missing-dependencies"
 version = "0.1.0"
-description = ""
-authors = ["Author 1 <email@mail.com>"]
+description = "Python Discord Summer Code Jam 2023"
+authors = ["Bobby-McBobface <54757965+Bobby-McBobface@users.noreply.github.com>"]
 license = "MIT"
 
 [tool.poetry.dependencies]
-python = "3.10.*"
+python = "3.11.*"
+black = "^23.7.0"
 
 [tool.poetry.dev-dependencies]
 # Base tools
-flake8 = "~4.0.1"
-isort = "~5.12.0"
-pre-commit = "~2.17.0"
+flake8 = "^4.0.1"
+isort = "^5.12.0"
+pre-commit = "^2.21.0"
 
 # Flake8 plugins, see https://github.com/python-discord/code-jam-template/tree/main#plugin-list
-flake8-docstrings = "~1.6.0"
+flake8-docstrings = "^1.7.0"
 
 
 [build-system]
