--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@
 # Increase the line length. This breaks PEP8 but it is way easier to work with.
 # The original reason for this limit was a standard vim terminal is only 79 characters,
 # but this doesn't really apply anymore.
-max-line-length=119
+max-line-length=88
 # Don't lint the venv or the CPython cache.
 exclude=.venv,__pycache__
 # Ignore some of the most obnoxious linting errors.
@@ -19,15 +19,9 @@ ignore=
     # Docstring Content
     D400,D401,D402,D404,D405,D406,D407,D408,D409,D410,D411,D412,D413,D414,D416,D417,
     # Comments
-    E266
+    E266,
+    # Black compatability
+    E203
 
 [isort]
-# Select the 5th style (Hanging grid grouped) to handle longer import.
-# This choice is mostly arbitrary and can be changed at your will.
-#
-# Example of this style:
-# from third_party import (
-#     lib1, lib2, lib3, lib4,
-#     lib5, ...
-# )
-multi_line_output=5
+profile = 'black'
