--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ pre-commit = "^2.21.0"
 # Flake8 plugins, see https://github.com/python-discord/code-jam-template/tree/main#plugin-list
 flake8-docstrings = "^1.7.0"
 
+[tool.pyright]
+typeCheckingMode = "strict"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
