--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ black = "^23.7.0"
 
 [tool.poetry.dev-dependencies]
 # Base tools
-ruff = "^0.0.286
+ruff = "^0.0.286"
 isort = "^5.12.0"
 pre-commit = "^2.21.0"
 
