--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -23,12 +23,11 @@ repos:
     hooks:
       - id: isort
 
-  - repo: https://github.com/pycqa/flake8
-    rev: 4.0.1
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.0.286
     hooks:
-      - id: flake8
-        additional_dependencies:
-          - flake8-docstrings~=1.6.0
+      - id: ruff
+        args: [ --fix, --exit-non-zero-on-fix ]
 
   - repo: https://github.com/psf/black
     rev: 23.7.0
