chore: delete tox.ini

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,9 @@ src = ["src"]
 [tool.pyright]
 typeCheckingMode = "strict"
 
+[tool.isort]
+profile = 'black'
+
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
