--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ black = "^23.7.0"
 ruff = "^0.0.286"
 isort = "^5.12.0"
 pre-commit = "^2.21.0"
+pytest = "^7.4.0"
 
 [tool.ruff]
 line-length = 88
@@ -24,6 +25,11 @@ typeCheckingMode = "strict"
 
 [tool.isort]
 profile = 'black'
+
+[tool.pytest.ini_options]
+addopts = [
+    "--import-mode=importlib",
+]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
