--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -23,10 +23,11 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ env.PYTHON_VERSION }}
-          cache: "poetry"
 
       - name: Install dependencies
-        run: poetry install
+        run: |
+          pip install poetry
+          poetry install
 
       - name: Run Pytest
         run: pytest
