--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ license = "MIT"
 [tool.poetry.dependencies]
 python = "3.11.*"
 black = "^23.7.0"
+numpy = "^1.25.2"
+pillow = "^10.0.0"
 
 [tool.poetry.dev-dependencies]
 # Base tools
