--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@codemirror/lang-python": "^6.1.3",
+    "@uiw/codemirror-theme-vscode": "^4.21.13",
+    "@uiw/react-codemirror": "^4.21.13",
     "autoprefixer": "^10.4.15",
     "axios": "^1.5.0",
     "postcss": "^8.4.29",
