--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ license = "MIT"
 python = "3.11.*"
 numpy = "^1.25.2"
 pillow = "^10.0.0"
+flask = "^2.3.3"
+flask-cors = "^4.0.0"
 
 [tool.poetry.dev-dependencies]
 # Base tools
